* fixed misaligned smileys and links in the me action. Signed-off-by:Thorsten Eurich <thorsten@eurich.de>

--- a/themes/default/css/_besocial/index_besocial.css
+++ b/themes/default/css/_besocial/index_besocial.css
@@ -353,6 +353,7 @@ strong {
 /* /me uses this a lot. (emote, try typing /me in a post.) */
 .meaction {
 	color: #50aa3a;
+	vertical-align: bottom;
 }
 .meaction:before {
 	content: "\270c";
